ateliers et modifs

--- a/EduCode/templates/workshop.html
+++ b/EduCode/templates/workshop.html
@@ -55,6 +55,22 @@
 
                 <div class="police-normal">
                     <strong>
+                        <span class="text-dark"><i class="fa fa-align-bullhorn"></i> Langues : </span>
+                    </strong>
+                    {{ this.language }}
+                    <hr>
+                </div>
+
+                <div class="police-normal">
+                    <strong>
+                        <span class="text-dark"><i class="fa fa-align-bullhorn"></i> Nombres d'apprenants : </span>
+                    </strong>
+                    {{ this.number }}
+                    <hr>
+                </div>
+
+                <div class="police-normal">
+                    <strong>
                         <span class="text-dark"><i class="fa fa-align-justify"></i> Description</span>
                     </strong>
 
