Fix smartphone sidebar and refactoring
* sidebar fixed on mobile
* refactoring in sections

--- a/EduCode/assets/static/home.scss
+++ b/EduCode/assets/static/home.scss
@@ -154,7 +154,10 @@ table {
   min-height: 300px;
   cursor: pointer;
   padding: 30px !important;
-
+  @include responsive(xs) {
+    padding-top: 15px !important;
+    padding-bottom: 15px !important;
+  }
   &:hover {
     .speaker-picture {
       transform: scale(1.2, 1.2);
@@ -169,6 +172,10 @@ table {
     font-weight: 600;
     margin-top: 10px;
     margin-bottom: 20px;
+
+    @include responsive(xs) {
+      font-size: 16px;
+    }
 
     a {
       color: $dark;
@@ -197,7 +204,7 @@ table {
 
       @include responsive(xs) {
         width: 100%;
-        height: 80px;
+        height: 105px ;
       }
     }
   }
