--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -1,3 +1,5 @@
+{% from "macros/sections.html" import render_sidebar %}
+
 <!doctype html>
 <html>
 <head>
@@ -27,201 +29,11 @@
         {% endif %}
     {% endfor %}
 
-    <div class="row d-flex d-md-block flex-nowrap wrapper">
-        {% if this.url_path in root_url %}
-            <div id="sidebar" class="col-md-2 float-left col-1 pl-0 pr-0 collapse width show">
-                <div class="position-fixed col-md-2">
-                    <div id="sidebar-wrapper">
-                        <div class="text-center brand">
-                            <a href="{{ '/' | url }}">
-                                <img src="{{ '/imgs/educode-logo-transparent.png' | url }}" alt="">
-                            </a>
-                        </div>
-                        <div class="list-group border-0 card">
-                            <a href="#program"
-                               class="list-group-item d-inline-block collapsed"
-                               data-toggle="collapse"
-                               aria-expanded="false">{{ this.s_program }}</a>
+    <div class="row wrapper">
+        <!-- we render the sidebar -->
+        {{ render_sidebar(this, alt, root_url) }}
 
-                            <div class="collapse" id="program">
-                                <a href="#anchor-overview" class="list-group-item">{{ this.s_overview_program }}</a>
-                                {% if alt == 'fr' %}
-                                    {% set alt = '' %}
-                                {% else %}
-                                    {% set alt = '/' + alt %}
-                                {% endif %}
-                                <a href="{{ alt + '/dimanche-26-aout' | url }}" class="list-group-item"><i
-                                        class="fa fa-angle-right" aria-hidden="true"></i> {{ this.s_sunday_26 }}</a>
-                                <a href="{{ alt + '/lundi-27-aout'    | url }}" class="list-group-item"><i
-                                        class="fa fa-angle-right" aria-hidden="true"></i> {{ this.s_monday_27 }}</a>
-                                <a href="{{ alt + '/mardi-28-aout'    | url }}" class="list-group-item"><i
-                                        class="fa fa-angle-right" aria-hidden="true"></i> {{ this.s_thuesday_28 }}</a>
-                                <a href="{{ alt + '/mercredi-29-aout' | url }}" class="list-group-item"><i
-                                        class="fa fa-angle-right" aria-hidden="true"></i> {{ this.s_wednesday_29 }}</a>
-                            </div>
-
-                            <a href="#anchor-speakers" class="list-group-item d-inline-block">{{ this.s_speakers }}</a>
-                            <a href="#anchor-expo" class="list-group-item d-inline-block">{{ this.s_expo }}</a>
-                            <a href="#anchor-partners" class="list-group-item d-inline-block">{{ this.s_partners }}</a>
-                            <a href="#anchor-inscription"
-                               class="list-group-item d-inline-block">{{ this.s_registration }}</a>
-                            <a href="#anchor-practical-infos"
-                               class="list-group-item d-inline-block">{{ this.s_practical_infos }}</a>
-                            <a href="#anchor-submissions"
-                               class="list-group-item d-inline-block">{{ this.s_submissions }}</a>
-                            <a href="#anchor-press" class="list-group-item d-inline-block">{{ this.s_press }}</a>
-                            <a href="#anchor-contact" class="list-group-item d-inline-block">{{ this.s_contact }}</a>
-                            <hr>
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-6 text-center">
-                                        <a href="http://lapremiere.be" target="_blank"><img width="75px"
-                                                                                            src="{{ "/partenaires/la-premiere/logo_lp_2017_rvb_filet.png" | url }}"
-                                                                                            alt="La Première"></a>
-                                    </div>
-                                    <div class="col-6 text-center">
-                                        <a href="http://rtbf.be/musiq3" target="_blank"><img width="72px"
-                                                                                             src="{{ "/partenaires/musiq3/logo_m3_rvb_filet_15.png" | url }}"
-                                                                                             alt="Musiq'3"></a>
-                                    </div>
-                                    <div class="col-6 text-center mb-1">
-                                        <a href="https://www.bozar.be/fr" target="_blank"><img width="56px"
-                                                                                               src="{{ "/partenaires/bozar/image-bozar.png" | url }}"
-                                                                                               alt="Bozar"></a>
-                                    </div>
-                                    <div class="col-6 text-center mb-1">
-                                        <a href="https://www.digitalwallonia.be" target="_blank"><img width="56px"
-                                                                                                      src="{{ "/partenaires/digital-wallonia/digitalwallonia-logo-degrades-358x259.png" | url }}"
-                                                                                                      alt="Digital Wallonia"></a>
-                                    </div>
-                                    <div class="col-6 text-center">
-                                        <a href="http://be.brussels" target="_blank"><img width="56px"
-                                                                                          src="{{ "/partenaires/region-de-bruxelles-capitale/logotype_2_rgb_72_blanc.jpg" | url }}"
-                                                                                          alt="Région de Bruxelles-Capitale"></a>
-                                    </div>
-                                    <div class="col-6 text-center">
-                                        <a href="http://www.federation-wallonie-bruxelles.be" target="_blank"><img
-                                                width="72px" src="{{ "/imgs/fwb.png" | url }}"
-                                                alt="Région de Bruxelles-Capitale"></a>
-                                    </div>
-                                    <div class="col-6 text-center">
-                                        <a href="http://unesco.org" target="_blank"><img width="72px"
-                                                                                         src="{{ "/partenaires/unesco/unesco_logo-small-117.png" | url }}"
-                                                                                         alt="Unesco"></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="license text-center police-normal small p-2">
-                                {{ render_cc_license("by-sa", "normal") }}
-                            </div>
-                            <!-- &copy; Copyleft 2018 by Nicolas Pettiaux. -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        {% else %}
-            {% set root_page = site.get_root(alt=alt) %}
-            <div id="sidebar" class="col-md-2 float-left col-1 pl-0 pr-0 collapse width show">
-                <div class="position-fixed col-md-2">
-                    <div class="text-center brand">
-                        <a href="{{ '/' | url }}">
-                            <img src="{{ '/imgs/educode-logo-transparent.png' | url }}" alt="">
-                        </a>
-                    </div>
-                    <div class="list-group border-0 card text-center ">
-                        <a href="#program"
-                           class="list-group-item d-inline-block collapsed"
-                           data-toggle="collapse"
-                           aria-expanded="false">{{ root_page.s_program }}</a>
-                        {% if alt == 'fr' %}
-                            {% set alt = '' %}
-                        {% else %}
-                            {% set alt = '/' + alt %}
-                        {% endif %}
-
-                        <div class="collapse" id="program">
-                            <a href="{{ '#anchor-overview' }}"
-                               class="list-group-item">{{ root_page.s_overview_program }}</a>
-                            <a href="{{ alt + '/dimanche-26-aout' | url }}" class="list-group-item"><i
-                                    class="fa fa-angle-right" aria-hidden="true"></i> {{ root_page.s_sunday_26 }}</a>
-                            <a href="{{ alt + '/lundi-27-aout'    | url }}" class="list-group-item"><i
-                                    class="fa fa-angle-right" aria-hidden="true"></i> {{ root_page.s_monday_27 }}</a>
-                            <a href="{{ alt + '/mardi-28-aout'    | url }}" class="list-group-item"><i
-                                    class="fa fa-angle-right" aria-hidden="true"></i> {{ root_page.s_thuesday_28 }}</a>
-                            <a href="{{ alt + '/mercredi-29-aout' | url }}" class="list-group-item"><i
-                                    class="fa fa-angle-right" aria-hidden="true"></i> {{ root_page.s_wednesday_29 }}</a>
-                        </div>
-                        <a href="{{ alt + '/#anchor-speakers' }}"
-                           class="list-group-item d-inline-block collapsed">{{ root_page.s_speakers }}</a>
-                        <a href="{{ alt + '/#anchor-expo' }}"
-                           class="list-group-item d-inline-block collapsed">{{ root_page.s_expo }}</a>
-                        <a href="{{ alt + '/#anchor-partners' }}"
-                           class="list-group-item d-inline-block collapsed">{{ root_page.s_partners }}</a>
-                        <a href="{{ alt + '/#anchor-inscription' }}"
-                           class="list-group-item d-inline-block collapsed">{{ root_page.s_registration }}</a>
-                        <a href="{{ alt + '/#anchor-practical-infos' }}"
-                           class="list-group-item d-inline-block collapsed">{{ root_page.s_practical_infos }}</a>
-                        <a href="{{ alt + '/#anchor-submissions' }}"
-                           class="list-group-item d-inline-block collapsed">{{ root_page.s_submissions }}</a>
-                        <a href="{{ alt + '/#anchor-press' }}"
-                           class="list-group-item d-inline-block collapsed">{{ root_page.s_press }}</a>
-                        <a href="{{ alt + '/#anchor-contact' }}"
-                           class="list-group-item d-inline-block collapsed">{{ root_page.s_contact }}</a>
-                        <hr>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-6 text-center">
-                                    <a href="http://lapremiere.be" target="_blank">
-                                        <img width="75px"
-                                             src="{{ "/partenaires/la-premiere/logo_lp_2017_rvb_filet.png" | url }}"
-                                             alt="La Première">
-                                    </a>
-                                </div>
-                                <div class="col-6 text-center">
-                                    <a href="http://rtbf.be/musiq3" target="_blank">
-                                        <img width="72px"
-                                             src="{{ "/partenaires/musiq3/logo_m3_rvb_filet_15.png" | url }}"
-                                             alt="Musiq'3">
-                                    </a>
-                                </div>
-                                <div class="col-4 text-center">
-                                    <a href="https://www.bozar.be/fr" target="_blank">
-                                        <img width="48px" src="{{ "/partenaires/bozar/image-bozar.png" | url }}" alt="">
-                                    </a>
-                                </div>
-                                <div class="col-4 text-center">
-                                    <a href="#" target="_blank">
-                                        <img width="48px"
-                                             src="{{ "/partenaires/digital-wallonia/digitalwallonia-logo-degrades-358x259.png" | url }}"
-                                             alt="Digital Wallonia">
-                                    </a>
-                                </div>
-                                <div class="col-4 text-center">
-                                    <a href="#" target="_blank">
-                                        <img width="48px"
-                                             src="{{ "/partenaires/region-de-bruxelles-capitale/logotype_2_rgb_72_blanc.jpg" | url }}"
-                                             alt="Région de Bruxelles-Capitale">
-                                    </a>
-                                </div>
-                                <div class="col-6 text-center">
-                                    <a href="http://unesco.org" target="_blank">
-                                        <img width="72px"
-                                             src="{{ "/partenaires/unesco/unesco_logo-small-117.png" | url }}"
-                                             alt="Unesco">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="license text-center">{{ render_cc_license("by-sa", "normal") }}</div>
-                        <!-- &copy; Copyleft 2018 by Nicolas Pettiaux. -->
-                    </div>
-                </div>
-            </div>
-        {% endif %}
-        <main class="col-md-10 float-left col p-0 main">
+        <main class="col col-sm-8 col-md-9 col-lg-10 float-left p-0 main">
             <div class="container-fluid">
                 <div class="language row">
                     <div class="col-12">
@@ -254,10 +66,13 @@
                     </div>
                 </div>
             </div>
+
             <div id="content-wrapper">
-                <a id="menu-icon" href="#" data-target="#sidebar" data-toggle="collapse">
-                    <i class="fa fa-navicon d-md-none"></i>
+
+                <a id="menu-icon" href="#" data-target="#sidebar" class="d-block d-sm-none">
+                    <i class="fa fa-navicon"></i>
                 </a>
+
                 {% block baseline %}{% endblock %}
                 {% block content %}{% endblock %}
             </div>
@@ -273,15 +88,7 @@
 
 <script>
     $(function () {
-
-        if (getBootstrapBreakpoint() !== 'xs') {
-            $('#sidebar').addClass('show');
-        } else {
-            $('#sidebar').removeClass('show');
-        }
-
         $(document).on("scroll", onScroll);
-
 
         {% if this == site.get_root() %}
             window.history.pushState("object or string", "Welcome - EduCode", "{{ this.path | url(alt=alt) }}");
@@ -297,8 +104,8 @@
             $links.removeClass("selected");
             $(this).addClass("selected");
 
-            var target = this.hash,
-                menu = target;
+            var target = this.hash;
+            var menu = target;
             var $target = $(target);
 
             $root.stop().animate({
@@ -309,6 +116,10 @@
             });
 
             return false;
+        });
+
+        $(window).resize( function (event) {
+            console.log(getBootstrapBreakpoint());
         });
 
         function onScroll(event) {
@@ -326,18 +137,15 @@
             });
         }
 
-        $(window).on('resize', function (e) {
-            if (getBootstrapBreakpoint() !== 'xs') {
-                $('#sidebar').addClass('show');
-            } else {
-                $('#sidebar').removeClass('show');
-            }
-        });
+        $("#menu-icon").on("click", function (event) {
+            event.preventDefault();
+            $("#mobile-sidebar").toggleClass("show");
+        })
     });
 
     function getBootstrapBreakpoint() {
         var w = $(document).innerWidth();
-        return (w < 768) ? 'xs' : ((w < 992) ? 'sm' : ((w < 1200) ? 'md' : 'lg'));
+        return (w < 575.98) ? 'xs' : ((w < 767.98) ? 'sm' : ((w < 991.98) ? 'md' : 'lg'));
     }
 
 </script>
