--- a/EduCode/templates/details-program-avec-description.html
+++ b/EduCode/templates/details-program-avec-description.html
@@ -5,6 +5,8 @@
         <div class="row">
             <div class="col-12 border-dark">
                 <div class="program-description">
+                    <span class="text-dark"><i class="fa fa-comment"></i> Description</span>
+                    <hr>
                     {{ this.description }}
                 </div>
                 <hr>
