--- a/EduCode/templates/macros/sections.html
+++ b/EduCode/templates/macros/sections.html
@@ -21,6 +21,7 @@
                         {"href": alt + "/mercredi-29-aout" | url, "text": context.s_wednesday_29}
                     ]
                 },
+                {"expandable": False, "href": alt + "/concert",          "text": "Concert"},
                 {"expandable": False, "href": '#anchor-speakers',        "text": context.s_speakers},
                 {"expandable": False, "href": '#anchor-expo',            "text": context.s_expo},
                 {"expandable": False, "href": '#anchor-partners',        "text": context.s_partners},
@@ -47,6 +48,7 @@
                         {"href": alt + "/mercredi-29-aout" | url, "text": root_page.s_wednesday_29}
                     ]
                 },
+                {"expandable": False, "href": alt + "/concert",                 "text": "Concert"},
                 {"expandable": False, "href": alt + '/#anchor-speakers',        "text": root_page.s_speakers},
                 {"expandable": False, "href": alt + '/#anchor-expo',            "text": root_page.s_expo},
                 {"expandable": False, "href": alt + '/#anchor-partners',        "text": root_page.s_partners},
