ajouts dans bandeau latéral + regroupement dons & donateurs

--- a/EduCode/templates/macros/sections.html
+++ b/EduCode/templates/macros/sections.html
@@ -29,6 +29,8 @@
                 {"expandable": False, "href": '#anchor-practical-infos', "text": context.s_practical_infos},
                 {"expandable": False, "href": '#anchor-submissions',     "text": context.s_submissions},
                 {"expandable": False, "href": '#anchor-press',           "text": context.s_press},
+                {"expandable": False, "href": alt + "/dons",             "text": "Dons"},                
+                {"expandable": False, "href": alt + "/garderie",         "text": "Garderie"},
                 {"expandable": False, "href": '#anchor-contact',         "text": context.s_contact},
             ]
         %}
@@ -56,6 +58,8 @@
                 {"expandable": False, "href": alt + '/#anchor-practical-infos', "text": root_page.s_practical_infos},
                 {"expandable": False, "href": alt + '/#anchor-submissions',     "text": root_page.s_submissions},
                 {"expandable": False, "href": alt + '/#anchor-press',           "text": root_page.s_press},
+                {"expandable": False, "href": alt + "/dons",                    "text": "Dons"},
+                {"expandable": False, "href": alt + "/garderie",                "text": "Garderie"},
                 {"expandable": False, "href": alt + '/#anchor-contact',         "text": root_page.s_contact},
             ]
         %}
