--- a/EduCode/templates/macros/sections.html
+++ b/EduCode/templates/macros/sections.html
@@ -6,6 +6,8 @@
     {% endif %}
 
     <!-- Here I define the menu when we are in the home page -->
+    <!-- I don't see how to create a submenu under practical infos and group there
+    /garderie and other infos to come -->
     {% if context.url_path in root_url %}
         {%
             set menu = [
@@ -22,6 +24,7 @@
                     ]
                 },
                 {"expandable": False, "href": alt + "/concert",          "text": "Concert"},
+                {"expandable": False, "href": alt + "/blog",             "text": "Blog"},
                 {"expandable": False, "href": '#anchor-speakers',        "text": context.s_speakers},
                 {"expandable": False, "href": '#anchor-expo',            "text": context.s_expo},
                 {"expandable": False, "href": '#anchor-partners',        "text": context.s_partners},
@@ -51,6 +54,7 @@
                     ]
                 },
                 {"expandable": False, "href": alt + "/concert",                 "text": "Concert"},
+                {"expandable": False, "href": alt + "/blog",                    "text": "Blog"},
                 {"expandable": False, "href": alt + '/#anchor-speakers',        "text": root_page.s_speakers},
                 {"expandable": False, "href": alt + '/#anchor-expo',            "text": root_page.s_expo},
                 {"expandable": False, "href": alt + '/#anchor-partners',        "text": root_page.s_partners},
