Practical infos expandable -- fix

--- a/EduCode/templates/macros/sections.html
+++ b/EduCode/templates/macros/sections.html
@@ -73,7 +73,7 @@
 
                 {
                     "expandable": True,
-                    "href": alt + '/#anchor-practical-infos',
+                    "href": '#anchor-practical-infos',
                     "text": root_page.s_practical_infos,
                     "children": [
                         {"href": alt + "/garderie" | url, "text": "Garderie"},
