Avancement page ateliers
- Filtres par catégorie et tranche d'âge fait
- Besoin de savoir quels sont les autres filtres
- Reste à réagencer proprement la liste des ateliers en forme de liste contigues (pour le moment, ceux filtrés sont juste cachés)

--- a/EduCode/assets/static/style.css
+++ b/EduCode/assets/static/style.css
@@ -564,6 +564,12 @@ table td, table th {
     #concert .music audio {
       vertical-align: middle; }
 
+#workshop-containers-page a:not(.btn) {
+  color: #b18528; }
+  #workshop-containers-page a:not(.btn):hover {
+    font-weight: 600;
+    text-decoration: none; }
+
 #sidebar, #mobile-sidebar {
   z-index: 3;
   font-family: 'Unica One', cursive !important;
