--- a/EduCode/templates/workshop.html
+++ b/EduCode/templates/workshop.html
@@ -9,9 +9,10 @@
                 <p>
                     {{ this.title }}
                     <br>
-                    <strong>{{ this.tag }}</strong></p>
+                    <strong>{{ this.tag }}</strong>
                 </p>
             </div>
+
             <div class="col-12 col-sm-10 border-dark">
                 <div class="police-normal">
                     <strong>
