--- a/EduCode/assets/static/style.scss
+++ b/EduCode/assets/static/style.scss
@@ -10,6 +10,16 @@ body {
 
 }
 
+#workshop-containers-page {
+  a:not(.btn) {
+    color: $darker-yellow;
+    &:hover {
+      font-weight: 600;
+      text-decoration: none;
+    }
+  }
+}
+
 #sidebar, #mobile-sidebar {
   z-index: 3;
   font-family: 'Unica One', cursive !important;
